# cmake_demo

MESSAGE_VAR_DEMO/: CMakeLists.txt
build_together/: CMakeLists.txt
build_together/acount_dir/: Account.cpp
custom_find/custom_mod/: CMakeLists.txt
custom_find/custom_mod/src/: dlib.cpp
custom_find/find_demo/: CMakeLists.txt  main.cpp
custom_find/find_demo/cmake/: Finddlib.cmake
custom_install_demo/custom_mod/: CMakeLists.txt
custom_install_demo/custom_mod/cmake/: dlibConfig.cmake.in
custom_install_demo/custom_mod/include/: dlib.h
custom_install_demo/custom_mod/installed/config/: dlibConfig.cmake  dlibTarget.cmake
custom_install_demo/custom_mod/src/: dlib.cpp
custom_install_demo/find_test/: CMakeLists.txt  main.cpp
dynamic_lib_test/acount_dir/: CMakeLists.txt
dynamic_lib_test/test_account/: CMakeLists.txt
find_demo/: CMakeLists.txt  main.cpp
function_macro/: CMakeLists.txt
generator_expression/: CMakeLists.txt
if_demo/: CMakeLists.txt
include_demo/: CMakeLists.txt
install_demo/: CMakeLists.txt  main.cpp
install_demo/src/: dlib.cpp  slib.cpp
static_lib_test/acount_dir/: Account.h  CMakeLists.txt
static_lib_test/test_account/: main.cpp
test/: CMakeLists.txt
test/release/: sss
test/src/: sss.cpp
